Using Aspect with xml and annotation